adding xalanj test case for, jira issue xalanj-2584